--- a/robitcubebot_controller/config/robitcubebot_controllers.yaml
+++ b/robitcubebot_controller/config/robitcubebot_controllers.yaml
@@ -1,6 +1,6 @@
 controller_manager:
   ros__parameters:
-    update_rate: 50 # Hz
+    update_rate: 30 # Hz
 
     robitcubebot_controller:
       type: diff_drive_controller/DiffDriveController
@@ -20,9 +20,10 @@ controller_manager:
       base_frame_id: base_footprint
       odom_frame_id: odom
       robot_base_frame_id: base_footprint
-      left_wheel_names  : ['wheel_left_joint']
-      right_wheel_names : ['wheel_right_joint']
-      
+      left_wheel_names  : ['back_wheel_right_joint']
+      right_wheel_names : ['back_wheel_left_joint']
+
+
     lifter_controller:
       type: velocity_controllers/JointGroupVelocityController
       joints:  # Changed 'joint' to 'joints' to match expected parameter
@@ -37,14 +38,14 @@ robitcubebot_controller:
   ros__parameters:
     type        : diff_drive_controller/DiffDriveController
     use_stamped_vel: true
-    left_wheel_names  : ['wheel_left_joint']
-    right_wheel_names : ['wheel_right_joint']
+    left_wheel_names  : ['front_wheel_right_joint','back_wheel_right_joint']
+    right_wheel_names : ['front_wheel_left_joint','back_wheel_left_joint']
 
-    publish_rate: 50.0               # default: 50
+    publish_rate: 30.0               # default: 50
     pose_covariance_diagonal : [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
     twist_covariance_diagonal: [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
 
-    wheel_separation : 0.2
+    wheel_separation : 0.24
     wheel_radius : 0.033
 
     wheel_separation_multiplier: 1.0
@@ -71,23 +72,22 @@ robitcubebot_controller:
     linear:
       x:
         has_velocity_limits    : true
-        max_velocity           : 0.7  # m/s
-        min_velocity           : -0.7 # m/s
+        max_velocity           : 1.0  # m/s
+        min_velocity           : -0.5 # m/s
         has_acceleration_limits: true
-        max_acceleration       : 0.7  # m/s^2
-        min_acceleration       : -0.7 # m/s^2
+        max_acceleration       : 0.8  # m/s^2
+        min_acceleration       : -0.4 # m/s^2
         has_jerk_limits        : false
         max_jerk               : 5.0  # m/s^3
     angular:
       z:
         has_velocity_limits    : true
-        max_velocity           : 8.5  # rad/s
-        min_velocity           : -8.5  # rad/s
+        max_velocity           : 2.5  # rad/s
         has_acceleration_limits: true
-        max_acceleration       : 5.0  # rad/s^2
-        min_acceleration       : -5.0   # rad/s^2
+        max_acceleration       : 2.3 # rad/s^2
         has_jerk_limits        : false
         max_jerk               : 2.5  # rad/s^3
+
 
 
 gripper_controller:
@@ -104,32 +104,27 @@ gripper_controller:
 simple_velocity_controller:
   ros__parameters:
     joints:
-      - wheel_left_joint
-      - wheel_right_joint
+     - front_wheel_right_joint
+     - back_wheel_right_joint
+     - front_wheel_left_joint
+     - back_wheel_left_joint
 
 odom_publisher:
   ros__parameters:
     type: diff_drive_controller/OdometryPublisher
-    publish_rate: 50
+    publish_rate: 30
     base_frame_id: base_footprint
     odom_frame_id: odom
     robot_base_frame_id: base_footprint
-    left_wheel_names  : ['wheel_left_joint']
-    right_wheel_names : ['wheel_right_joint']
+    left_wheel_names  : ['back_wheel_right_joint']
+    right_wheel_names : ['back_wheel_left_joint']
+
 joint_state_broadcaster:
   ros__parameters:
     joints:
-      - wheel_left_joint
-      - wheel_right_joint
+      - back_wheel_right_joint
+      - back_wheel_left_joint
       - lift_joint
 
 
 
-# LiDAR configuration
-lidar:
-  ros__parameters:
-    scan_topic: "/scan"
-    frame_id: "laser_frame"
-    min_range: 0.12
-    max_range: 3.5
-    update_rate: 30.0
