--- a/robitcubebot_controller/config/robitcubebot_controllers.yaml
+++ b/robitcubebot_controller/config/robitcubebot_controllers.yaml
@@ -1,6 +1,6 @@
 controller_manager:
   ros__parameters:
-    update_rate: 30 # Hz
+    update_rate: 100 # Hz
 
     robitcubebot_controller:
       type: diff_drive_controller/DiffDriveController
@@ -16,12 +16,12 @@ controller_manager:
 
     odom_publisher:
       type: diff_drive_controller/OdometryPublisher
-      publish_rate: 30
+      publish_rate: 50
       base_frame_id: base_footprint
       odom_frame_id: odom
       robot_base_frame_id: base_footprint
-      left_wheel_names  : ['front_wheel_right_joint']
-      right_wheel_names : ['front_wheel_left_joint']
+      left_wheel_names  : ['back_wheel_left_joint']
+      right_wheel_names : ['back_wheel_right_joint']
 
 
     lifter_controller:
@@ -38,10 +38,10 @@ robitcubebot_controller:
   ros__parameters:
     type        : diff_drive_controller/DiffDriveController
     use_stamped_vel: true
-    left_wheel_names  : ['front_wheel_right_joint','back_wheel_right_joint']
-    right_wheel_names : ['front_wheel_left_joint','back_wheel_left_joint']
+    left_wheel_names  : ['front_wheel_left_joint','back_wheel_left_joint']
+    right_wheel_names : ['front_wheel_right_joint','back_wheel_right_joint']
 
-    publish_rate: 30.0               # default: 30
+    publish_rate: 50.0               # default: 50
     pose_covariance_diagonal : [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
     twist_covariance_diagonal: [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
 
@@ -112,16 +112,29 @@ simple_velocity_controller:
 odom_publisher:
   ros__parameters:
     type: diff_drive_controller/OdometryPublisher
-    publish_rate: 30
+    publish_rate: 50
     base_frame_id: base_footprint
     odom_frame_id: odom
     robot_base_frame_id: base_footprint
-    left_wheel_names  : ['front_wheel_right_joint']
-    right_wheel_names : ['front_wheel_left_joint']
+    left_wheel_names  : ['back_wheel_left_joint']
+    right_wheel_names : ['back_wheel_right_joint']
 
 joint_state_broadcaster:
   ros__parameters:
     joints:
       - front_wheel_right_joint
+      - back_wheel_right_joint
       - front_wheel_left_joint
+      - back_wheel_left_joint
       - lift_joint
+
+
+
+# LiDAR configuration
+lidar:
+  ros__parameters:
+    scan_topic: "/scan"
+    frame_id: "laser_frame"
+    min_range: 0.12
+    max_range: 3.5
+    update_rate: 30.0
