--- a/lift_joint_controller/package.xml
+++ b/lift_joint_controller/package.xml
@@ -1,28 +1,14 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>robitcubebot_py</name>
+  <name>lift_joint_controller</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="otaha3911@gmail.com">omar</maintainer>
+  <maintainer email="120633090+omarabelgwad@users.noreply.github.com">omar</maintainer>
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
-  <depend>geometry_msgs</depend>
-  <depend>builtin_interfaces</depend>
-
-
-  <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
-
-  
-  <depend>rclpy_action</depend>
-  <depend>control_msgs</depend>
-  <depend>trajectory_msgs</depend>
-  <depend>sensor_msgs</depend>
-  <depend>rosidl_default_runtime</depend>
-
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
