--- a/robitcubebot_navigation/CMakeLists.txt
+++ b/robitcubebot_navigation/CMakeLists.txt
@@ -23,7 +23,7 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 install(
-  DIRECTORY launch
+  DIRECTORY 
   DESTINATION share/${PROJECT_NAME}
 )
 
