--- a/robitcubebot_moveit/package.xml
+++ b/robitcubebot_moveit/package.xml
@@ -3,21 +3,16 @@
 <package format="3">
   <name>robitcubebot_moveit</name>
   <version>0.0.0</version>
-  <description>MoveIt configuration package for the RobitCubeBot robot.</description>
-  <maintainer email="otaha3911@gmail.com">Omar</maintainer>
-  <license>Apache License 2.0</license>
+  <description>Arduinobot MoveIt! 2 package</description>
+  <maintainer email="antonio.brandi@outlook.it">Antonio Brandi</maintainer>
+  <license>Apache 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   
-  <!-- Add dependencies specific to your project -->
-  <depend>roscpp</depend>
-  <depend>robot_state_publisher</depend> <!-- Example, adjust based on your dependencies -->
-
-
-
   <exec_depend>ros2launch</exec_depend>
+  <exec_depend>rviz2</exec_depend>
+  <exec_depend>moveit_configs_utils</exec_depend>
 
-  
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
