--- a/my_bot/config/nav2_multirobot_params_1.yaml
+++ b/my_bot/config/nav2_multirobot_params_1.yaml
@@ -181,10 +181,11 @@ local_costmap:
       resolution: 0.05
       robot_radius: 0.22
       #plugins: ["voxel_layer", "inflation_layer"]
-      plugins: ["voxel_layer", "gradient_layer", "inflation_layer"]
-      gradient_layer:
-        plugin : "nav2_gradient_costmap_plugin/GradientLayer"
+      plugins: ["voxel_layer", "robots_layer", "inflation_layer"]
+      robots_layer:
+        plugin : "custom_nav2_costmap_plugin/RobotsLayer"
         enabled: True
+        robot_footprint: [0.2, 0.2, 0.2, -0.2, -0.2, -0.2, -0.2, 0.2]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
@@ -219,10 +220,11 @@ global_costmap:
       use_sim_time: True
       robot_radius: 0.22
       #plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
-      plugins: ["static_layer", "obstacle_layer", "gradient_layer", "inflation_layer"]
-      gradient_layer:
-        plugin : "nav2_gradient_costmap_plugin/GradientLayer"
+      plugins: ["static_layer", "obstacle_layer", "robots_layer", "inflation_layer"]
+      robots_layer:
+        plugin : "custom_nav2_costmap_plugin/RobotsLayer"
         enabled: True
+        robot_footprint: [0.2, 0.2, 0.2, -0.2, -0.2, -0.2, -0.2, 0.2]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -295,10 +297,14 @@ robot_state_publisher:
 
 waypoint_follower:
   ros__parameters:
+    use_sim_time: True
     loop_rate: 20
     stop_on_failure: false
-    waypoint_task_executor_plugin: "wait_at_waypoint"
-    wait_at_waypoint:
-      plugin: "nav2_waypoint_follower::WaitAtWaypoint"
-      enabled: True
-      waypoint_pause_duration: 200
+    waypoint_task_executor_plugin: "lift_at_waypoint"
+    lift_at_waypoint:
+      plugin: "nav2_waypoint_follower::LiftAtWaypoint"
+      loading_unloading_time: 2         # Can be "load", "do nothing", or "unload"
+      lift_speed: 0.1          # Speed in the z-axis
+      enabled: True            # Enable or disable the plugin
+      robot_footprint: [0.1, 0.1, 0.1, -0.1, -0.1, -0.1, -0.1, 0.1]
+      pallet_footprint: [0.2, 0.2, 0.2, -0.2, -0.2, -0.2, -0.2, 0.2]
