--- a/robitcubebot_description/rviz/nav2_multirobot_params_2.yaml
+++ b/robitcubebot_description/rviz/nav2_multirobot_params_2.yaml
@@ -296,10 +296,14 @@ robot_state_publisher:
 
 waypoint_follower:
   ros__parameters:
+    use_sim_time: True
     loop_rate: 20
     stop_on_failure: false
-    waypoint_task_executor_plugin: "wait_at_waypoint"
-    wait_at_waypoint:
-      plugin: "nav2_waypoint_follower::WaitAtWaypoint"
-      enabled: True
-      waypoint_pause_duration: 200
+    waypoint_task_executor_plugin: "lift_at_waypoint"
+    lift_at_waypoint:
+      plugin: "nav2_waypoint_follower::LiftAtWaypoint"
+      min_lift_pos: 0.0        
+      max_lift_pos: 0.8       
+      enabled: True            # Enable or disable the plugin
+      robot_footprint: [0.2, 0.2, 0.2, -0.2, -0.2, -0.2, -0.2, 0.2]
+      pallet_footprint: [0.23, 0.23, 0.23, -0.23, -0.23, -0.23, -0.23, 0.23]
