--- a/robitcubebot_description/rviz/nav2_multirobot_params_1.yaml
+++ b/robitcubebot_description/rviz/nav2_multirobot_params_1.yaml
@@ -180,8 +180,8 @@ local_costmap:
       height: 3
       resolution: 0.05
       robot_radius: 0.22
-      plugins: ["voxel_layer", "inflation_layer"]
-      #plugins: ["voxel_layer", "robots_layer", "inflation_layer"]
+      #plugins: ["voxel_layer", "inflation_layer"]
+      plugins: ["voxel_layer", "robots_layer", "inflation_layer"]
       robots_layer:
         plugin : "custom_nav2_costmap_plugin/RobotsLayer"
         enabled: True
@@ -219,8 +219,8 @@ global_costmap:
     ros__parameters:
       use_sim_time: True
       robot_radius: 0.22
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
-      #plugins: ["static_layer", "obstacle_layer", "robots_layer", "inflation_layer"]
+      #plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
+      plugins: ["static_layer", "obstacle_layer", "robots_layer", "inflation_layer"]
       robots_layer:
         plugin : "custom_nav2_costmap_plugin/RobotsLayer"
         enabled: True
@@ -307,4 +307,4 @@ waypoint_follower:
       max_lift_pos: 0.8       
       enabled: True            # Enable or disable the plugin
       robot_footprint: [0.2, 0.2, 0.2, -0.2, -0.2, -0.2, -0.2, 0.2]
-      pallet_footprint: [0.23, 0.23, 0.23, -0.23, -0.23, -0.23, -0.23, 0.23]
+      pallet_footprint: [0.42, 0.42, 0.42, -0.42, -0.42, -0.42, -0.42, 0.42]
